@@ -236,12 +236,19 @@ or the filenames match the answer is so obvious the detailed test is omitted.
   <tr>
     <td valign="top">file1</td>
     <td valign="top">First file to test</td>
-    <td align="center">Yes.</td>
+    <td align="center">Yes</td>
   </tr>
   <tr>
     <td valign="top">file2</td>
     <td valign="top">Second file to test</td>
-    <td align="center">Yes.</td>
+    <td align="center">Yes</td>
+  </tr>
+  <tr>
+    <td valign="top">textfile</td>
+    <td valign="top">Whether to ignore line endings when comparing files;
+        default <i>false</i>
+    </td>
+    <td align="center">No</td>
   </tr>
 </table>
 
