@@ -22,7 +22,7 @@ import org.apache.tools.ant.BuildException;
 import org.apache.tools.ant.util.FileUtils;
 
 /**
- * Compares two files for bitwise equality based on size and
+ * Compares two files for equality based on size and
  * content. Timestamps are not at all looked at.
  *
  * @since Ant 1.5
@@ -39,6 +39,8 @@ public class FilesMatch implements Condition {
      * files to compare
      */
     private File file1, file2;
+
+    private boolean textfile = false;
 
 
     /**
@@ -61,6 +63,14 @@ public class FilesMatch implements Condition {
     }
 
     /**
+     * Set whether to ignore line endings when comparing files.
+     * @param textfile whether to ignore line endings.
+     */
+    public void setTextfile(boolean textfile) {
+        this.textfile = textfile;
+    }
+
+    /**
      * comparison method of the interface
      *
      * @return true if the files are equal
@@ -78,7 +88,7 @@ public class FilesMatch implements Condition {
         //#now match the files
         boolean matches = false;
         try {
-            matches = FILE_UTILS.contentEquals(file1, file2);
+            matches = FILE_UTILS.contentEquals(file1, file2, textfile);
         } catch (IOException ioe) {
             throw new BuildException("when comparing files: "
                 + ioe.getMessage(), ioe);
